CREATE TYPE "papel_profissional" AS ENUM (
  'professor',
  'diretor',
  'coordenador',
  'vice_diretor',
  'administrativo',
  'outro'
);

CREATE TYPE "categoria_evento" AS ENUM (
  'aula',
  'reuniao',
  'planejamento',
  'tutoria',
  'apoio_presencial',
  'avaliacao',
  'evento_institucional',
  'pausa',
  'tarefa',
  'outro'
);

CREATE TYPE "tipo_recorrencia" AS ENUM (
  'semanal',
  'quinzenal',
  'mensal'
);

CREATE TYPE "tipo_excecao_calendario" AS ENUM (
  'feriado',
  'ferias',
  'ponto_facultativo',
  'recesso',
  'suspensao',
  'outro'
);

CREATE TABLE "escolas" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar(200) NOT NULL,
  "sigla" varchar(50),
  "ano_letivo" integer,
  "created_at" timestamp
);

CREATE TABLE "profissionais" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "nome" varchar(200) NOT NULL,
  "papel" papel_profissional NOT NULL,
  "observacoes" text,
  "created_at" timestamp
);

CREATE TABLE "disciplinas" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "nome" varchar(120) UNIQUE NOT NULL,
  "area_conhecimento" varchar(120),
  "observacoes" text
);

CREATE TABLE "turmas" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "codigo" varchar(50) NOT NULL,
  "nome_exibicao" varchar(100),
  "etapa_ensino" varchar(50),
  "serie_ano" varchar(50),
  "turno" varchar(30),
  "observacoes" text
);

CREATE TABLE "locais" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "nome" varchar(120) NOT NULL,
  "tipo" varchar(50),
  "capacidade" integer,
  "observacoes" text
);

CREATE TABLE "agendas" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "profissional_id" integer,
  "nome" varchar(150) NOT NULL,
  "tipo" varchar(30) NOT NULL,
  "descricao" text,
  "data_inicio" date,
  "data_fim" date,
  "origem" varchar(50),
  "created_at" timestamp
);

CREATE TABLE "faixas_horario" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "nome" varchar(80),
  "hora_inicio" time NOT NULL,
  "hora_fim" time NOT NULL,
  "tipo" varchar(30),
  "ordem" integer
);

CREATE TABLE "eventos_agenda" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "agenda_id" integer NOT NULL,
  "profissional_id" integer,
  "disciplina_id" integer,
  "turma_id" integer,
  "local_id" integer,
  "faixa_horario_id" integer,
  "titulo" varchar(200) NOT NULL,
  "categoria" categoria_evento NOT NULL,
  "descricao" text,
  "data_evento" date,
  "dia_semana" smallint,
  "hora_inicio" time,
  "hora_fim" time,
  "recorrente" boolean NOT NULL DEFAULT false,
  "status" varchar(30) DEFAULT 'ativo',
  "origem_texto" text,
  "created_at" timestamp
);

CREATE TABLE "recorrencias_evento" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "evento_id" integer UNIQUE NOT NULL,
  "tipo" tipo_recorrencia NOT NULL,
  "intervalo" integer NOT NULL DEFAULT 1,
  "dias_semana" varchar(30),
  "data_inicio" date NOT NULL,
  "data_fim" date
);

CREATE TABLE "excecoes_calendario" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "escola_id" integer NOT NULL,
  "agenda_id" integer,
  "tipo" tipo_excecao_calendario NOT NULL,
  "titulo" varchar(150) NOT NULL,
  "descricao" text,
  "data_inicio" date NOT NULL,
  "data_fim" date,
  "created_at" timestamp
);

CREATE TABLE "observacoes_agenda" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "agenda_id" integer NOT NULL,
  "data_referencia" date,
  "titulo" varchar(150),
  "conteudo" text NOT NULL,
  "categoria" varchar(50),
  "created_at" timestamp
);

CREATE TABLE "participantes_evento" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "evento_id" integer NOT NULL,
  "profissional_id" integer,
  "nome_livre" varchar(200),
  "papel_no_evento" varchar(50)
);

CREATE TABLE "recursos_evento" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "evento_id" integer NOT NULL,
  "descricao" varchar(200) NOT NULL,
  "detalhes" text
);

COMMENT ON COLUMN "agendas"."tipo" IS 'institucional, individual, setor';

COMMENT ON COLUMN "agendas"."origem" IS 'csv, odt, manual';

COMMENT ON COLUMN "faixas_horario"."tipo" IS 'aula, intervalo, almoco, livre';

COMMENT ON COLUMN "eventos_agenda"."dia_semana" IS '1=segunda ... 7=domingo; usado para agendas recorrentes';

COMMENT ON COLUMN "eventos_agenda"."origem_texto" IS 'texto original importado da planilha';

COMMENT ON COLUMN "recorrencias_evento"."dias_semana" IS 'lista serializada para importacao inicial; ex.: 1,3,5';

COMMENT ON COLUMN "observacoes_agenda"."categoria" IS 'observacao, tarefa, lembrete';

COMMENT ON COLUMN "participantes_evento"."nome_livre" IS 'usado quando o participante veio apenas como texto na planilha';

ALTER TABLE "profissionais" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "turmas" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "locais" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "agendas" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "agendas" ADD FOREIGN KEY ("profissional_id") REFERENCES "profissionais" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "faixas_horario" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("agenda_id") REFERENCES "agendas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("profissional_id") REFERENCES "profissionais" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("disciplina_id") REFERENCES "disciplinas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("turma_id") REFERENCES "turmas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("local_id") REFERENCES "locais" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "eventos_agenda" ADD FOREIGN KEY ("faixa_horario_id") REFERENCES "faixas_horario" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recorrencias_evento" ADD FOREIGN KEY ("evento_id") REFERENCES "eventos_agenda" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "excecoes_calendario" ADD FOREIGN KEY ("escola_id") REFERENCES "escolas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "excecoes_calendario" ADD FOREIGN KEY ("agenda_id") REFERENCES "agendas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "observacoes_agenda" ADD FOREIGN KEY ("agenda_id") REFERENCES "agendas" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "participantes_evento" ADD FOREIGN KEY ("evento_id") REFERENCES "eventos_agenda" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "participantes_evento" ADD FOREIGN KEY ("profissional_id") REFERENCES "profissionais" ("id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "recursos_evento" ADD FOREIGN KEY ("evento_id") REFERENCES "eventos_agenda" ("id") DEFERRABLE INITIALLY IMMEDIATE;
